--- a/Bitrise/View/Base.lproj/Main.storyboard
+++ b/Bitrise/View/Base.lproj/Main.storyboard
@@ -711,8 +711,8 @@
         <scene sceneID="hIz-AP-VOD">
             <objects>
                 <viewController storyboardIdentifier="BRMainController" id="XfG-lQ-9wD" customClass="BRMainController" sceneMemberID="viewController">
-                    <view key="view" wantsLayer="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="645"/>
+                    <view key="view" wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="m2S-Jp-Qdl">
+                        <rect key="frame" x="0.0" y="0.0" width="482" height="645"/>
                         <subviews>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="82J-cI-jpS">
                                 <rect key="frame" x="0.0" y="585" width="482" height="60"/>
@@ -759,15 +759,16 @@
                                     <constraint firstItem="6CE-dn-y2P" firstAttribute="centerX" secondItem="82J-cI-jpS" secondAttribute="centerX" id="apR-9t-fOR"/>
                                 </constraints>
                             </customView>
-                            <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="90" horizontalPageScroll="10" verticalLineScroll="90" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jro-eN-807">
+                            <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="115" horizontalPageScroll="10" verticalLineScroll="115" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jro-eN-807">
                                 <rect key="frame" x="0.0" y="0.0" width="482" height="585"/>
                                 <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LYZ-ht-aUh">
                                     <rect key="frame" x="0.0" y="0.0" width="482" height="585"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="90" usesAutomaticRowHeights="YES" viewBased="YES" indentationPerLevel="14" outlineTableColumn="VDd-0D-hGO" translatesAutoresizingMaskIntoConstraints="NO" id="1IG-VH-UrI">
-                                            <rect key="frame" x="0.0" y="0.0" width="482" height="570"/>
+                                        <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="90" viewBased="YES" indentationPerLevel="14" outlineTableColumn="VDd-0D-hGO" translatesAutoresizingMaskIntoConstraints="NO" id="1IG-VH-UrI">
+                                            <rect key="frame" x="0.0" y="0.0" width="482" height="560"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            <size key="intercellSpacing" width="0.0" height="25"/>
                                             <color key="backgroundColor" name="_sourceListBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                             <tableColumns>
@@ -783,17 +784,17 @@
                                                     </textFieldCell>
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
-                                                        <tableCellView identifier="BRBuildCellView" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CEk-3K-jXL" customClass="BRBuildCellView">
-                                                            <rect key="frame" x="0.0" y="0.0" width="482" height="90"/>
+                                                        <tableCellView identifier="BRBuildCellView" translatesAutoresizingMaskIntoConstraints="NO" id="CEk-3K-jXL" customClass="BRBuildCellView">
+                                                            <rect key="frame" x="0.0" y="0.0" width="482" height="96"/>
                                                             <subviews>
                                                                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="Ne7-WQ-C7u">
-                                                                    <rect key="frame" x="10" y="13" width="462" height="90"/>
+                                                                    <rect key="frame" x="10" y="0.0" width="462" height="96"/>
                                                                     <subviews>
                                                                         <stackView distribution="fill" orientation="horizontal" alignment="top" spacing="20" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Szo-B6-Mtd" customClass="BRBuildContentView">
-                                                                            <rect key="frame" x="15" y="0.0" width="427" height="90"/>
+                                                                            <rect key="frame" x="15" y="0.0" width="427" height="96"/>
                                                                             <subviews>
                                                                                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="Mv7-pf-SlE">
-                                                                                    <rect key="frame" x="0.0" y="0.0" width="30" height="90"/>
+                                                                                    <rect key="frame" x="0.0" y="6" width="30" height="90"/>
                                                                                     <subviews>
                                                                                         <imageView hidden="YES" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nvh-D2-Lrc">
                                                                                             <rect key="frame" x="0.0" y="0.0" width="30" height="90"/>
@@ -820,7 +821,7 @@
                                                                                     </constraints>
                                                                                 </customView>
                                                                                 <stackView distribution="fillProportionally" orientation="vertical" alignment="leading" spacing="7" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ckh-zv-646" customClass="BRBuildInfoView">
-                                                                                    <rect key="frame" x="50" y="0.0" width="377" height="90"/>
+                                                                                    <rect key="frame" x="50" y="6" width="377" height="90"/>
                                                                                     <subviews>
                                                                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="X5G-n9-Q9E">
                                                                                             <rect key="frame" x="-2" y="74" width="42" height="16"/>
@@ -1054,12 +1055,12 @@
                                                                             </customSpacing>
                                                                         </stackView>
                                                                         <customView translatesAutoresizingMaskIntoConstraints="NO" id="NLr-ma-tnY">
-                                                                            <rect key="frame" x="392" y="0.0" width="70" height="90"/>
+                                                                            <rect key="frame" x="392" y="0.0" width="70" height="96"/>
                                                                             <subviews>
                                                                                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="qC8-yV-gGe">
-                                                                                    <rect key="frame" x="-2" y="73" width="74" height="17"/>
+                                                                                    <rect key="frame" x="-2" y="80" width="74" height="16"/>
                                                                                     <constraints>
-                                                                                        <constraint firstAttribute="height" constant="17" id="A6w-4K-YmO"/>
+                                                                                        <constraint firstAttribute="height" constant="16" id="A6w-4K-YmO"/>
                                                                                     </constraints>
                                                                                     <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="# 25" usesSingleLineMode="YES" id="gzH-nu-JSZ">
                                                                                         <font key="font" size="12" name="Jura-Medium"/>
@@ -1068,8 +1069,8 @@
                                                                                     </textFieldCell>
                                                                                 </textField>
                                                                                 <button translatesAutoresizingMaskIntoConstraints="NO" id="DJq-ZJ-DgM">
-                                                                                    <rect key="frame" x="0.0" y="0.0" width="70" height="90"/>
-                                                                                    <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="TripleDotsShadowed" imagePosition="only" alignment="center" alternateImage="TripleDotsShadowed" inset="2" id="2zu-ZZ-nWL">
+                                                                                    <rect key="frame" x="0.0" y="0.0" width="70" height="96"/>
+                                                                                    <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="TripleDotsShadowed" imagePosition="only" alignment="center" alternateImage="TripleDotsShadowed" imageScaling="proportionallyUpOrDown" inset="2" id="2zu-ZZ-nWL">
                                                                                         <behavior key="behavior" lightByContents="YES"/>
                                                                                         <font key="font" metaFont="system"/>
                                                                                     </buttonCell>
@@ -1100,9 +1101,9 @@
                                                             </subviews>
                                                             <constraints>
                                                                 <constraint firstItem="Ne7-WQ-C7u" firstAttribute="leading" secondItem="CEk-3K-jXL" secondAttribute="leading" constant="10" id="7dC-up-DyS"/>
-                                                                <constraint firstAttribute="bottom" secondItem="Ne7-WQ-C7u" secondAttribute="bottom" constant="13" id="cAp-Nw-wDx"/>
+                                                                <constraint firstAttribute="bottom" secondItem="Ne7-WQ-C7u" secondAttribute="bottom" id="cAp-Nw-wDx"/>
                                                                 <constraint firstAttribute="trailing" secondItem="Ne7-WQ-C7u" secondAttribute="trailing" constant="10" id="s2T-Ce-Cze"/>
-                                                                <constraint firstItem="Ne7-WQ-C7u" firstAttribute="top" secondItem="CEk-3K-jXL" secondAttribute="top" constant="13" id="wxN-oh-AV8"/>
+                                                                <constraint firstItem="Ne7-WQ-C7u" firstAttribute="top" secondItem="CEk-3K-jXL" secondAttribute="top" id="wxN-oh-AV8"/>
                                                             </constraints>
                                                             <connections>
                                                                 <outlet property="accountLabel" destination="X5G-n9-Q9E" id="DN5-Lu-PMv"/>
@@ -1126,7 +1127,7 @@
                                         </outlineView>
                                     </subviews>
                                     <nil key="backgroundColor"/>
-                                    <edgeInsets key="contentInsets" left="0.0" right="0.0" top="15" bottom="0.0"/>
+                                    <edgeInsets key="contentInsets" left="0.0" right="0.0" top="25" bottom="0.0"/>
                                 </clipView>
                                 <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="al4-RA-N2V">
                                     <rect key="frame" x="-100" y="-100" width="355" height="16"/>
